CHANGELOG
This is the change log for the phpWebSite base only. Each module has
its own separate CHANGELOG file.

26 August 2007
+ Javascript - prompt no longer runs escape function on result
+ File.php - copy_directory fixes added. 
  o New error messages written to log depending on reason for file
    failure
  o Fixed bad logic on slash additions to directory.
  o copy_directory doesn't fail completely on one bad copy

22 August 2007
+ Added ability to add a class to the open_window javascript link or
button.
+ Default theme : some style adjustments for Layout's benefit

10 August 2007
+ Removed $this call in PHPWS_Text::decodeText function

Version 1.6.0 9 August 2007
------------------------------------------------------------------
8 August 2007
+ Text class
 o Removed use_smilies setting
 o Fixed bb filter : was making smilies inside tags
 o Added pear bb filter
 o ALLOW_TEXT_FILTERS = false will now turn off all text filtering mods
 o parseOutputs third parameter determines if text filtering will be
   enabled.
+ Updated main pear class, added bb parsing libs to pear distro
+ Form class :  Simplified pre-editor parsing

7 August 2007
+ Ajax javascript should work under IE7 properly now.
+ Fishy works under IE7


3 August 2007
+ Added option in Mail class to send emails individually instead of
  altogether.

2 August 2007
+ added default char type to utf-8 to setup template
+ Default theme - dumped the paragraph margin

31 July 2007
+ Updated js_calendar


27 July 2007
+ Core was missing javascript update information for branches.

26 July 2007
+ Changed Forms class to use the lower upload limit: system or
setting.
+ Added upload_limits.txt file.

23 July 2007
+ Default rows and columns for text areas now comes for the form
config file.
+ Javascript
  o Tinymce editor - changed method for determining height and width

+ Updated file: formConfig.php

20 July 2007
+ DBPager - changed 'page' variable to 'pg' to try and prevent
  problems with mod_rewrite