@@ -8,6 +8,7 @@
 6 = SEARCH_SEARCH_BOX
 7 = MENU_MENU_1
 8 = BREADCRUMB_VIEW
+9 = TOP_MENU
 
 [locked]
 ignore = 0,1,3,4,5,6,7,8
